<resources>
    <string name="app_name">MemoryGame</string>
    <string name="play_button_title">Play</string>
    <string name="flips_counter">Flips: %d</string>
    <string name="difficulty_normal">Normal</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_level_title">Choose a difficulty level:</string>
    <string name="show_score_button_title">Show Scores</string>
    <string name="scores_list_title">List of scores</string>
    <string name="game_done_title">Game Done</string>
    <string name="game_done_message">You did %d flips in %d seconds.</string>
    <string name="game_done_action">Back to menu</string>
    <string name="loading_popup_title">Loading</string>
    <string name="loading_popup_message">"Preparing board..."</string>
    <string name="difficulty_custom">Custom</string>
</resources>
